# pentagwam

./: Cargo.toml  TRACING_CMDS.md
human_powered_vm/: Cargo.toml  FIELDS.txt  SAVE.ron
human_powered_vm/.hpvm-save/: fields.ron
human_powered_vm/.hpvm-save/scripts/: get_structure.md  get_variable.md  unify_variable.md
human_powered_vm/scenarios/: deriv.ron
human_powered_vm/src/: human_powered_vm.rs  main.rs
human_powered_vm/src/human_powered_vm/: array.rs  builtin_fields.rs  cmds.rs  error.rs  eval.rs  help.rs  instr_fmt.rs  scenario.rs  script.rs  styles.rs  val_fmt.rs  vals.rs
human_powered_vm/src/human_powered_vm/vals/: cellval.rs  lval.rs  mod.rs  rval.rs  slice.rs  val.rs  valty.rs
human_powered_vm/src/vals/: cellval.rs  instr_args.rs  mod.rs  rval.rs  slice.rs  val.rs  valty.rs
src/: cell.rs  defs.rs  instr.rs  lib.rs  main.rs  mem.rs  parse.rs  syntax.rs  unify.rs  vm.rs
src/bc/: instr.rs  instr_fmt.rs  mod.rs  vm.rs
src/syntax/: deserialize.rs  serialize.rs
src/syntax/compile/: mod.rs  tests.rs
src/unify/: rec.rs  tests.rs  vm.rs
src/vm/: exec.rs
