[package]
name = "pentagwam"
version = "0.1.0"
edition = "2021"

[dependencies]
chumsky = "0.9.3"
tracing = "0.1.40"

[dev-dependencies]
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
] }
env_logger = "0.10.0"
test-log = { version = "0.2.12", features = ["trace", "log"] }
assert2 = "0.3.14"
